<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".iniciarSesion">

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="529dp"
        tools:layout_editor_absoluteY="202dp">

        <TextView
            android:id="@+id/usuariotxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="@dimen/margenes"
            android:layout_marginTop="@dimen/marginTop"
            android:text="@string/users"
            android:textSize="@dimen/letra"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usuariotxt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margenBtn"
            android:hint="@string/users" />

        <TextView
            android:id="@+id/passtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margenBtn"
            android:text="@string/password"
            android:textSize="@dimen/letra"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passtxt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margenBtn"
            android:hint="@string/password"
            android:password="true"/>

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margenBtn"
            android:onClick="enviar"
            android:text="@string/enviar" />

        <Button
            android:id="@+id/btnVolver1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnEnviar"
            android:layout_centerHorizontal="true"
            android:text="@string/volver"
            android:onClick="volver"/>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>