<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:onClick="sesion"
        android:text="@string/sesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <Button
        android:id="@+id/btnCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSesion"
        android:onClick="correo"
        android:text="@string/correo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSesion"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/btnAcercaDe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCorreo"
        android:onClick="acercaDe"
        android:text="@string/acercaDe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCorreo"
        app:layout_constraintVertical_bias="0.068" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAcercaDe"
        android:onClick="bd"
        android:text="db"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAcercaDe"
        app:layout_constraintVertical_bias="0.083" />

    <Button
        android:id="@+id/btnQuery"
        android:layout_width="164dp"
        android:layout_height="51dp"
        android:layout_above="@+id/btnSesion"
        android:layout_below="@id/btnSesion"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:onClick="bdQuery"
        android:text="bdQuery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.122" />
    <!---
            <Button
                android:id="@+id/btnInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="inicio"
                android:text="@string/inicio"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/urltxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingresarURL"
                android:textStyle="bold"
                android:textSize="@dimen/letra"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_marginHorizontal="@dimen/margenes"/>

            <EditText
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/urltxt"
                android:hint="@string/URL"
                android:layout_marginHorizontal="@dimen/margenes"/>
    -->

</androidx.constraintlayout.widget.ConstraintLayout>